# dcam2zarr

./: .gitignore  README.md  pyproject.toml
scripts/: test_client.py
src/dcam2zarr/: cli.py  config.py  server.py  shm.py  stream.py
src/dcam2zarr/static/: viewer.html
