[project]
name = "dcam2zarr"
version = "0.1.0"
description = "Hamamatsu DCAM to Zarr streaming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pyDCAM",
    "pydantic",
    "fastapi",
    "uvicorn",
    "acquire-zarr",
]

[project.scripts]
dcam2zarr = "dcam2zarr.cli:main"
ls_cams = "dcam2zarr.cli:ls_cams"
dcam_server = "dcam2zarr.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]